# django-user-auth-strawberry

./: pyproject.toml
backend/: db.sqlite3  requirements.txt
backend/backend/: schema.py  settings.py  urls.py
backend/users/: models.py  schema.py  types.py
backend/users/migrations/: 0001_initial.py
backend/videos/: models.py  schema.py  types.py
backend/videos/migrations/: 0001_initial.py
